# Astro-Mobile-App

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_WEEK6.md  build-with-java17.bat  build.bat  build.gradle  build_output.txt  gradle.properties  log.txt  settings.gradle  test_stacking_snr.c  tetra3_implementation_guide.docx
app/: build.gradle
app/src/androidTest/java/com/astro/app/native_/: NativePlateSolverTest.java  NativeStarDetectionTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bound.json  bound_18.json  bound_edges_18.json  bound_in_18.json  constellation_education_latest.json  constellation_education_no_is_zodiac.json  constellation_lines.json  constellations.json  education_content.json  education_content_distance.json  education_content_with_radec.json  full_education_content_100.json  planets_education.json
app/src/main/assets/tetra3/: README.md
app/src/main/cpp/: CMakeLists.txt  Makefile.test  test_native.c
app/src/main/cpp/astrometry/gsl-an/: config.h  config.status  gsl-config  gsl.pc
app/src/main/cpp/astrometry/libkd/: checktree  fix-bb
app/src/main/cpp/astrometry/solver/: augment-xylist  augment-xylist-main.dep  build-astrometry-index  deps  fits-guess-scale  get-wcs  image2xy  imarith  imstat  listhead  liststruc  modhead  new-wcs  query-starkd  solve-field  solver_wrap.c  startree  tablist  tabmerge  tweak2.c  wcs-grab
app/src/main/cpp/astrometry/util/: an-fitstopnm  an-fitstopnm.dep  an-pnmtofits  an-pnmtofits.dep  anwcs.dep  cairoutils.dep  codekd.dep  dallpeaks.dep  dcen3x3.dep  deps  dfind.dep  dmedsmooth.dep  dobjects.dep  downsample-fits  downsample-fits.dep  dpeaks.dep  dselip.dep  dsigma.dep  dsmooth.dep  fit-wcs  fit-wcs-main.dep  fit-wcs.dep  fits-column-merge  fits-column-merge.dep  fits-flip-endian  fits-flip-endian.dep  fitsbin.dep  fitsfile.dep  fitsgetext  fitsgetext.dep  fitsioutils.dep  fitstable.dep  get-healpix  get-healpix.dep  gslutils.dep  hpsplit  hpsplit.dep  image2xy.c  image2xy.dep  index.dep  (+72 more)
app/src/main/cpp/jni/: astrometry_jni.c  stacking_jni.c
app/src/main/java/com/astro/app/: AstroApplication.java  IntroSplashActivity.java  MainActivity.java  StarFieldView.java
app/src/main/java/com/astro/app/common/: ErrorHandler.java  LoadingState.java  Result.java  SkyDataProvider.java
app/src/main/java/com/astro/app/common/model/: ConstellationResult.java  Pointing.java  StarData.java
app/src/main/java/com/astro/app/core/control/: AstronomerModel.java  AstronomerModelImpl.java  Clock.java  LocationController.java  MagneticDeclinationCalculator.java  OrbitalElements.kt  RealClock.java  RealMagneticDeclinationCalculator.java  SensorController.java  SolarSystemBody.kt  TimeTravelClock.java
app/src/main/java/com/astro/app/core/highlights/: TonightsHighlights.java
app/src/main/java/com/astro/app/core/layers/: AbstractLayer.java  ConstellationsLayer.java  GridLayer.java  Layer.java  PlanetsLayer.java  StarsLayer.java
app/src/main/java/com/astro/app/core/math/: Astronomy.kt  CoordinateManipulations.kt  Geometry.kt  LatLong.kt  MathUtils.kt  Matrix3x3.kt  Matrix4x4.kt  RaDec.kt  TimeUtils.kt  Vector3.kt
app/src/main/java/com/astro/app/core/renderer/: LabelRenderer.java  LineRenderer.java  PointRenderer.java  ShaderProgram.java  SkyCanvasView.java  SkyGLSurfaceView.java  SkyRenderer.java
app/src/main/java/com/astro/app/core/util/: TimeConstants.java  VisibleForTesting.java
app/src/main/java/com/astro/app/data/api/: OpenAIClient.java
app/src/main/java/com/astro/app/di/: AppComponent.java  AppModule.java
app/src/main/java/com/astro/app/ml/: PlateSolveCallback.java  PlateSolveResult.java  PlateSolveService.java
app/src/main/java/com/astro/app/native_/: AstrometryNative.java  ConstellationOverlay.java  ImageStackingManager.java  NativePlateSolver.java  StackingNative.java  WcsProjection.java
app/src/main/java/com/astro/app/search/: PrefixStore.java  SearchArrowView.java  SearchIndex.java  SearchResult.java
app/src/main/proto/: source.proto
app/src/main/python/: __init__.py  tetra3_wrapper.py
app/src/main/res/anim/: fade_in_pulse.xml  title_zoom_exit.xml
app/src/main/res/drawable/: bg_bottom_sheet_handle.xml  bg_chat_bubble_bot.xml  bg_chat_bubble_user.xml  bg_gps_indicator.xml  bg_gradient.xml  btn_start_bg.xml  circle_primary_container.xml  ic_approx_coord.xml  ic_asterism.xml  ic_background_origin.xml  ic_best_month.xml  ic_family.xml  ic_formalized.xml  ic_launcher_foreground.xml  ic_major_stars.xml  ic_source.xml
app/src/main/res/layout/: activity_education_detail.xml  activity_image_stacking.xml  activity_intro_splash.xml  activity_main.xml  activity_onboarding.xml  activity_photo_capture.xml  activity_plate_solve.xml  activity_plate_solve_result.xml  activity_search.xml  activity_settings.xml  activity_sky_brightness.xml  activity_sky_map.xml  activity_star_info.xml  dialog_example_capture.xml  dialog_loading.xml  dialog_plate_solve_tips.xml  dialog_sky_brightness.xml  dialog_sky_quality.xml  dialog_time_travel.xml  fragment_chat_bottom_sheet.xml  fragment_tonights_highlights.xml  item_chat_message_bot.xml  item_chat_message_user.xml  item_detected_star.xml  item_onboarding_page.xml  item_related_star.xml  item_search_result.xml  item_stacking_thumbnail.xml
app/src/main/res/values/: colors.xml  colors_search_details.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: fab_menu_scene.xml  fab_menu_visible.xml  file_paths.xml
docs/: ARCHITECTURE.md  CORE_CONCEPTS.md  PLAN.md  PROGRESS.md  README.md  SETUP.md  STRUCTURE.md  TETRA3_PROGRESS.md  stacking_validation_report.md
tools/: generate_tetra3_database.py
(+78 files in other folders)
